--- a/index.html
+++ b/index.html
@@ -206,12 +206,15 @@
   </div>
   
   <!-- YouTube įrašas -->
-  <div class="container" data-aos="fade-up" data-aos-delay="200">
-    <h3>YouTube įrašas</h3>
-    <iframe width="600" height="400" src="https://www.youtube.com/watch?v=oB1v-wh7EGU" 
-      title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-  </div>
+ <div class="container" data-aos="fade-up" data-aos-delay="200">
+  <h3>YouTube įrašas</h3>
+  <iframe width="600" height="400" 
+    src="https://www.youtube.com/embed/oB1v-wh7EGU" 
+    title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+</div>
+
   
   <!-- Garso įrašas -->
   <div class="container" data-aos="fade-up" data-aos-delay="300">
