--- a/index.html
+++ b/index.html
@@ -206,14 +206,7 @@
   </div>
   
   <!-- YouTube įrašas -->
- <div class="container" data-aos="fade-up" data-aos-delay="200">
-  <h3>YouTube įrašas</h3>
-  <iframe width="600" height="400" 
-    src="https://www.youtube.com/embed/oB1v-wh7EGU" 
-    title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  </iframe>
-</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Sc8hyK-U0fU?si=I4p2BTZZ3OHewVyZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
   
   <!-- Garso įrašas -->
